Removed z-index that didn't seem to be needed, but did cause an issue with the blue overlay

--- a/html/ui/css/corporate.css
+++ b/html/ui/css/corporate.css
@@ -495,7 +495,6 @@ body > .header .navbar .nav > li > a:hover > .label {
 .user-panel {
   margin: 10px 5px;
   position: relative;
-  z-index: 1100;
 }
 .user-panel:before,
 .user-panel:after {
